# EMWaves

./: .gitignore  README.md  project.godot
CLion/: CMakeLists.txt
CLion/src/: main.cpp  main.h
CLion/src/WVS/: fields.cpp  fields.h
CLion/src/mapc/: map.c
CLion/src/mathCPP/: Vector3.hpp  mathcpp.h
CLionCPP/: CMakeLists.txt
CLionCPP/gdn_3.3/: bin
CLionCPP/gdn_3.3.stable/: bin
CLionCPP/gdn_3.3.stable/include/: core  gen  godot-headers
CLionCPP/gdn_3.3.stable/src/: init_2.cpp
CLionCPP/gdn_3.3/src/: init.cpp
CLionCPP/gdn_3.x/: bin
CLionCPP/gdn_3.x/src/: init.cpp  init.h  init_2.cpp
Godot/: ITEMS.gd  project.godot
Godot/gdnative/: waves.gdns
Godot/gdnative_cpp/: wavescpp.gdnlib  wavescpp.gdns
Godot/scenes/hud/: rts.tscn
Godot/scenes/levels/: main.tscn
Godot/scenes/props/: electron.tscn
Godot/scripts/: electron.gd  fields.gd  gdnative.gd
gdnative/: waves.gdnlib  waves.gdns
scenes/levels/: main.tscn
scenes/props/: electron.tscn
scripts/: electron.gd  fields.gd  gdnative.gd
